Разметка внутренних страницы

--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <body class="page__body">
     <header class="page-header">
       <div class="header-wrapper">
-        <a class="page-header__logo" href="#" aria-label="Логотип Pink.">
+        <a class="page-header__logo" href="index.html" aria-label="Логотип Pink.">
           <svg width="74" height="23" viewBox="0 0 74 23" aria-hidden="true" focusable="false"  xmlns="http://www.w3.org/2000/svg">
             <path d="M0.00496827 1.54857C0.00487772 1.21254 0.135804 0.889818 0.369742 0.649431C0.60368 0.409043 0.922049 0.27008 1.25676 0.262266H8.39001C13.4469 0.262266 16.7751 2.9645 16.7751 7.39179V7.45162C16.7751 12.2977 12.7415 14.8105 7.97274 14.8105H2.53836V21.611C2.55394 21.7874 2.53277 21.9651 2.47619 22.1329C2.41961 22.3006 2.32887 22.4547 2.20973 22.5854C2.09058 22.716 1.94565 22.8204 1.78416 22.8918C1.62266 22.9631 1.44812 23 1.27166 23C1.0952 23 0.920671 22.9631 0.759173 22.8918C0.597674 22.8204 0.452744 22.716 0.333602 22.5854C0.21446 22.4547 0.123708 22.3006 0.0671295 22.1329C0.0105515 21.9651 -0.0106138 21.7874 0.00496827 21.611V1.54857ZM8.07209 12.5171C11.7778 12.5171 14.2119 10.5228 14.2119 7.53139V7.47156C14.2119 4.26078 11.8175 2.59556 8.25092 2.59556H2.58804V12.4772L8.07209 12.5171Z"/>
             <path d="M21.5935 1.38904C21.5779 1.21262 21.5991 1.03487 21.6556 0.867114C21.7122 0.699353 21.803 0.545245 21.9221 0.414596C22.0412 0.283947 22.1862 0.179616 22.3477 0.108238C22.5092 0.0368607 22.6837 0 22.8602 0C23.0366 0 23.2112 0.0368607 23.3727 0.108238C23.5342 0.179616 23.6791 0.283947 23.7982 0.414596C23.9174 0.545245 24.0081 0.699353 24.0647 0.867114C24.1213 1.03487 24.1425 1.21262 24.1269 1.38904V21.611C24.1425 21.7874 24.1213 21.9651 24.0647 22.1329C24.0081 22.3006 23.9174 22.4548 23.7982 22.5854C23.6791 22.7161 23.5342 22.8204 23.3727 22.8918C23.2112 22.9631 23.0366 23 22.8602 23C22.6837 23 22.5092 22.9631 22.3477 22.8918C22.1862 22.8204 22.0412 22.7161 21.9221 22.5854C21.803 22.4548 21.7122 22.3006 21.6556 22.1329C21.5991 21.9651 21.5779 21.7874 21.5935 21.611V1.38904Z"/>
@@ -19,13 +19,13 @@
           <button class="main-nav__toogle"><span class="visually-hidden">Открыть меню навигации</span></button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="#">Главная</a>
+              <a href="index.html">Главная</a>
             </li>
             <li class="main-nav__item">
               <a href="catalog.html">Фотографии</a>
             </li>
             <li class="main-nav__item">
-              <a href="form.html">Конкурс</a>
+              <a href="#">Конкурс</a>
             </li>
             <li class="main-nav__item">
               <a href="#">Html Academy</a>
@@ -34,103 +34,85 @@
         </nav>
       </div>
     </header>
-    <main class="page-main">
-      <h1 class="visually-hidden">Приложение Pink - надень розовые очки!</h1>
-      <section class="downloads">
-        <div class="dowloads__wrapper">
-          <h2 class="downloads__title index-title">Взгляните на жизнь иначе!</h2>
-          <a class="downloads__button" href="#">Скачать приложение</a>
-          <small class="downloads__legend">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</small>
-        </div>
-      </section>
-      <section class="suggests">
-        <h2 class="visually-hidden">Наши предложения</h2>
-        <div class="suggests__wrapper">
-          <p class="suggests__head-title">Устали от серости мегаполиса?</p>
-          <p class="suggests__head-title">Нам есть, что вам предложить!</p>
-          <ul class="suggests__list">
-            <li class="suggests__item">
-              <h3 class="suggests__title">Поднимает настроение</h3>
-              <p class="suggests__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-            </li>
-            <li class="suggests__item">
-              <h3 class="suggests__title">Меняет мир вокруг</h3>
-              <p class="suggests__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-            </li>
-            <li class="suggests__item">
-              <h3 class="suggests__title">Заводит новых друзей</h3>
-              <p class="suggests__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="review slider">
-        <h2 class="visually-hidden">Отзывы о нас</h2>
-        <div class="review__wrapper">
-          <div class="review__list slider__list">
-            <blockquote class="review__item slider__item">
-              <cite class="review__author-name">Николай Петров</cite>
-              <p class="review__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-            </blockquote>
-          </div>
-          <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle slider__toggle--current" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
-          </p>
-        </div>
-      </section>
-      <section class="tariffs slider">
-        <h2 class="visually-hidden">Тарифы приложения</h2>
-        <table class="tariffs__table slider__list">
-          <thead class="tariffs__item slider__item">
-            <tr class="tariffs__item-row">
-              <td></td>
-              <td class="tariffs__item-cell tariffs__item-cell--hit">
-                <p class="tariffs__name">СТАНДАРТ</p>
-                <span class="tariffs__cost">3,99 USD</span>
-              </td>
-            </tr>
-          </thead>
-          <tr class="tariffs__options">
-            <th class="tariffs__options-name">Розовый фильтр</th>
-            <td class="tariffs__option-value slider__item"><span class="tariffs__option-name-value">Розовый фильтр</span></td>
-          </tr>
-          <tr class="tariffs__options">
-            <th class="tariffs__options-name">Смайлики</th>
-            <td class="tariffs__option-value slider__item"><span class="tariffs__option-name-value">Смайлики</span></td>
-          </tr>
-          <tr class="tariffs__options">
-            <th class="tariffs__options-name">Комментарии</th>
-            <td class="tariffs__option-value slider__item"><span class="tariffs__option-name-value">Комментарии</span></td>
-          </tr>
-        </table>
-        <p class="reviews__toggles slider__toggles">
-          <button class="slider__toggle" type="button">1</button>
-          <button class="slider__toggle slider__toggle--current" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
-        </p>
-      </section>
-      <section class="feedback">
-        <h2 class="feedback__title">Остались вопросы?<br>
-          Свяжитесь с нами!</h2>
-        <div class="feedback__wrapper">
-          <div class="feedback__item">
-            <b class="feebback__item-title">Звоните:</b>
-            <a class="feedback-link" href="tel:+7(812)555-66-66">+7 (812) 555-66-66</a>
-          </div>
-          <div class="feedback__item">
-            <b class="feebback__item-title"></b>
-            <a class="feedback-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </div>
-          <div class="feedback__item">
-            <b class="feebback__item-title"></b>
-            <a class="feedback-link" href="#"><address>ул. Большая Конюшенная, 19/8</address></a>
-          </div>
-        </div>
-        <p class="map">
-          <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A9ea038e7e822fba73f59622ea253795b394dcb60eb07fffd5b6014ac2ae75be0&amp;width=320&amp;height=240&amp;lang=ru_RU&amp;scroll=true"></script>
-        </p>
+    <main class="page-form">
+      <div class="inner-page-title">
+        <h1 class="inner-page-title__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      </div>
+      <section class="contest">
+        <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</h2>
+        <form class="contest__form" action="https://echo.htmlacademy.ru">
+          <fieldset class="contest__user">
+            <label class="field-label" for="user-last-name">ФАМИЛИЯ:</label>
+            <input class="field-input" name="user-last-name" id="user-last-name" type="text" placeholder="Укажите фамилию *" required>
+            <label class="field-label" for="user-first-name">ИМЯ:</label>
+            <input class="field-input" name="user-first-name" id="user-first-name" type="text" placeholder="Введите ваше имя *" required>
+            <label class="field-label" for="user-patronym">ОТЧЕСТВО:</label>
+            <input class="field-input" name="user-patronym" id="user-patronym" type="text" placeholder="Ну и отчество тоже">
+          </fieldset>
+          <fieldset class="contest__journey">
+            <legend class="contest__legend">Ваши безбашенные достижения в путешествии</legend>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="crazy-journey" value="selfie-with-shark" type="checkbox" checked>
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Сделал селфи с акулой</span>
+            </label>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="crazy-journey" value="burned-on-the-beach" type="checkbox" checked>
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Обгорел на пляже</span>
+            </label>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="crazy-journey" value="seen-chuck-norris" type="checkbox">
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Видел Чака Норриса</span>
+            </label>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="crazy-journey" value="buy-souvenir" type="checkbox">
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Накупил сувениров</span>
+            </label>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="crazy-journey" value="held-the-tower" type="checkbox" checked>
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Удержал башню</span>
+            </label>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="crazy-journey" value="broke-the-hotel" type="checkbox">
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Разгромил отель</span>
+            </label>
+          </fieldset>
+          <fieldset class="contest__feedback">
+            <label class="field-label" for="phone">НОМЕР ТЕЛЕФОНА</label>
+            <input class="field-input" name="phone" id="phone" type="tel" placeholder="Номер, пожалуйста">
+            <label class="field-label" for="email">АДРЕС ПОЧТЫ</label>
+            <input class="field-input" name="email" id="email" type="email" placeholder="Введите почту *">
+          </fieldset>
+          <fieldset class="contest__system">
+            <legend class="contest__legend">С каким приложением путешествовали?</legend>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="system" value="IOS" type="radio" checked>
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Pink для iOS</span>
+            </label>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="system" value="Android" type="radio">
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Pink на Android</span>
+            </label>
+            <label class="contest__label control">
+              <input class="visually-hidden" name="system" value="Windows" type="radio">
+              <span class="contol__mark"></span>
+              <span class="control__style-text">Windows Phone</span>
+            </label>
+          </fieldset>
+          <fieldset class="contest__emotion">
+            <label class="field-label field-label--textarea" for="emotion">ОПИШИТЕ СВОИ ЭМОЦИИ</label>
+            <textarea class="field-input field-input--textarea" name="emotion" id="emotion" cols="30" rows="10">Можно прям в красках, не стесняясь в выражениях</textarea>
+          </fieldset>
+          <button class="contest__button" type="submit">Отправить форму</button>
+          <p class="contest__requared"><b class="contest__requared-mark">*</b> — обязательные поля</p>
+        </form>
       </section>
     </main>
     <footer class="page-footer">
