Создал все файлы .less

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Пинк</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -33,11 +34,11 @@
           </ul>
         </nav>
       </div>
-    </header>
-    <main class="page-catalog">
       <div class="inner-page-title">
         <h1 class="inner-page-title__text">Фотографии пользователей</h1>
       </div>
+    </header>
+    <main class="page-catalog sticky-footer">
       <section class="catalog">
         <h2 class="catalog__title">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
         <ul class="catalog__list">
