--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Пинк</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -33,11 +34,11 @@
           </ul>
         </nav>
       </div>
-    </header>
-    <main class="page-form">
       <div class="inner-page-title">
         <h1 class="inner-page-title__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
+    </header>
+    <main class="page-form sticky-footer">
       <section class="contest">
         <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</h2>
         <form class="contest__form" action="https://echo.htmlacademy.ru">
