--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Пинк</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -33,8 +34,6 @@
           </ul>
         </nav>
       </div>
-    </header>
-    <main class="page-main">
       <h1 class="visually-hidden">Приложение Pink - надень розовые очки!</h1>
       <section class="downloads">
         <div class="dowloads__wrapper">
@@ -43,6 +42,8 @@
           <small class="downloads__legend">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</small>
         </div>
       </section>
+    </header>
+    <main class="page-index sticky-footer">
       <section class="suggests">
         <h2 class="visually-hidden">Наши предложения</h2>
         <div class="suggests__wrapper">
@@ -117,15 +118,15 @@
         <div class="feedback__wrapper">
           <div class="feedback__item">
             <b class="feebback__item-title">Звоните:</b>
-            <a class="feedback-link" href="tel:+7(812)555-66-66">+7 (812) 555-66-66</a>
+            <a class="feedback__link" href="tel:+7(812)555-66-66">+7 (812) 555-66-66</a>
           </div>
           <div class="feedback__item">
             <b class="feebback__item-title"></b>
-            <a class="feedback-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            <a class="feedback__link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </div>
           <div class="feedback__item">
             <b class="feebback__item-title"></b>
-            <a class="feedback-link" href="#"><address>ул. Большая Конюшенная, 19/8</address></a>
+            <a class="feedback__link" href="#"><address>ул. Большая Конюшенная, 19/8</address></a>
           </div>
         </div>
         <p class="map">
