--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,22 +20,22 @@
           <button class="main-nav__toogle"><span class="visually-hidden">Открыть меню навигации</span></button>
           <ul class="main-nav__list">
             <li class="main-nav__item">
-              <a href="index.html">Главная</a>
+              <a class="main-nav__link" href="index.html">Главная</a>
             </li>
             <li class="main-nav__item">
-              <a href="#">Фотографии</a>
+              <a class="main-nav__link" href="#">Фотографии</a>
             </li>
             <li class="main-nav__item">
-              <a href="form.html">Конкурс</a>
+              <a class="main-nav__link" href="form.html">Конкурс</a>
             </li>
             <li class="main-nav__item">
-              <a href="#">Html Academy</a>
+              <a class="main-nav__link" href="#">Html Academy</a>
             </li>
           </ul>
         </nav>
       </div>
       <div class="inner-page-title">
-        <h1 class="inner-page-title__text">Фотографии пользователей</h1>
+        <h1 class="page-title">Фотографии пользователей</h1>
       </div>
     </header>
     <main class="page-catalog sticky-footer">
@@ -185,9 +185,8 @@
         </section>
         <aside class="development">
           <h2 class="visually-hidden">О разработчике</h2>
-          <span class="development__text"></span>
+          <span class="development__text">Разработано</span>
           <a href="https://htmlacademy.ru/intensive/adaptive">
-            <span class="visually-hidden"></span>
             <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" viewBox="0 0 60 60" aria-hidden="true" focusable="false">
               <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
             </svg>
