Стилизация всех страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-    <header class="page-header">
+    <header class="page-header page-header--inset">
       <div class="header-wrapper">
         <a class="page-header__logo" href="index.html" aria-label="Логотип Pink.">
           <svg width="74" height="23" viewBox="0 0 74 23" aria-hidden="true" focusable="false"  xmlns="http://www.w3.org/2000/svg">
@@ -137,8 +137,8 @@
             </div>
           </div>
           <div class="post__buttons">
-            <button class="button" type="submit">Запостить</button>
-            <button class="button" type="reset">Отмена</button>
+            <button class="post__button post__button--submit" type="submit">Запостить</button>
+            <button class="post__button post__button--reset" type="reset">Отмена</button>
           </div>
         </form>
       </section>
