--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-    <header class="page-header">
+    <header class="page-header page-header--inset">
       <div class="header-wrapper">
         <a class="page-header__logo" href="index.html" aria-label="Логотип Pink.">
           <svg width="74" height="23" viewBox="0 0 74 23" aria-hidden="true" focusable="false"  xmlns="http://www.w3.org/2000/svg">
