Адаптивная сетка внутренних страниц

--- a/source/form.html
+++ b/source/form.html
@@ -122,13 +122,15 @@
             </label>
           </fieldset>
           <fieldset class="contest__emotion">
-            <div class="field">
+            <div class="field field--emotion">
               <label class="field__label field__label--textarea" for="emotion">ОПИШИТЕ СВОИ ЭМОЦИИ</label>
               <textarea class="field__input field__input--textarea" name="emotion" id="emotion" cols="30" rows="10">Можно прям в красках, не стесняясь в выражениях</textarea>
             </div>
           </fieldset>
-          <button class="contest__button" type="submit">Отправить форму</button>
-          <p class="contest__requared"><b class="contest__requared-mark">*</b> — обязательные поля</p>
+          <div class="contest__wrapper-button">
+            <button class="contest__button" type="submit">Отправить форму</button>
+            <p class="contest__requared"><b class="contest__requared-mark">*</b> — обязательные поля</p>
+          </div>
         </form>
       </section>
     </main>
