--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>Пинк</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png" >
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
@@ -110,15 +114,15 @@
         </div>
         <div class="suggests__wrapper">
           <ul class="suggests__list">
-            <li class="suggests__item">
+            <li class="suggests__item suggests__item--mood">
               <h3 class="suggests__title">Поднимает настроение</h3>
               <p class="suggests__desc">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
             </li>
-            <li class="suggests__item">
+            <li class="suggests__item suggests__item--world">
               <h3 class="suggests__title">Меняет мир вокруг</h3>
               <p class="suggests__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
             </li>
-            <li class="suggests__item">
+            <li class="suggests__item suggests__item--friends">
               <h3 class="suggests__title">Заводит новых друзей</h3>
               <p class="suggests__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
