--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,32 +46,7 @@
           </nav>
         </div>
       </div>
-      <script>
-        var navMain = document.querySelector('.main-nav__switch');
-        var navContainer = document.querySelector('.main-nav__container');
-        var navToggle = document.querySelector('.main-nav__toggle');
-
-        navMain.classList.remove('main-nav__switch--nojs');
-        navContainer.classList.remove('main-nav__container--nojs');
-
-        navToggle.addEventListener('click', function() {
-          if (navMain.classList.contains('main-nav__switch--closed')) {
-            navMain.classList.remove('main-nav__switch--closed');
-            navMain.classList.add('main-nav__switch--open')
-          } else {
-            navMain.classList.add('main-nav__switch--closed');
-            navMain.classList.remove('main-nav__switch--open')
-          }
-          if (navContainer.classList.contains('main-nav__container--closed')) {
-            navContainer.classList.remove('main-nav__container--closed');
-            navContainer.classList.add('main-nav__container--open')
-          }
-          else {
-            navContainer.classList.add('main-nav__container--closed');
-            navContainer.classList.remove('main-nav__container--open')
-          }
-        });
-      </script>
+      <script src="js/burger.js"></script>
       <div class="page-title">
         <h1 class="page-title__inset-page">Фотографии<br>пользователей</h1>
       </div>
@@ -83,11 +58,11 @@
           <ul class="catalog__list">
             <li class="catalog__item catalog__item--panorama">
               <picture>
-                <!-- <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.webp 1x, img/catalog-item/panorama-desktop@2x.webp 2x"> -->
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.webp 1x, img/catalog-item/panorama-desktop@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.jpg 1x, img/catalog-item/panorama-desktop@2x.jpg 2x">
-                <!-- <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/panorama-tablet.webp 1x, img/catalog-item/panorama-tablet@2x.webp 2x"> -->
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/panorama-tablet.webp 1x, img/catalog-item/panorama-tablet@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/panorama-tablet.jpg 1x, img/catalog-item/panorama-tablet@2x.jpg 2x">
-                <!-- <source type="image/webp" srcset="img/catalog-item/panorama-mobile.webp 1x, img/catalog-item/panorama-mobile@2x.webp 2x"> -->
+                <source type="image/webp" srcset="img/catalog-item/panorama-mobile.webp 1x, img/catalog-item/panorama-mobile@2x.webp 2x">
                 <img class="catalog__img catalog__img--panorama" width="320" height="137" src="img/catalog-item/panorama-mobile.jpg" srcset="img/catalog-item/panorama-mobile@2x.jpg" alt="">
               </picture>
               <div class="catalog__item-wrapper">
@@ -101,8 +76,11 @@
             </li>
             <li class="catalog__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-1-desktop.webp 1x, img/catalog-item/photo-1-desktop@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-1-desktop.jpg 1x, img/catalog-item/photo-1-desktop@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-1-tablet.webp 1x, img/catalog-item/photo-1-tablet@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-1-tablet.jpg 1x, img/catalog-item/photo-1-tablet@2x.jpg 2x">
+                <source type="image/webp" srcset="img/catalog-item/photo-1-mobile.webp 1x, img/catalog-item/photo-1-mobile@2x.webp 2x">
                 <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-1-mobile.jpg" srcset="img/catalog-item/photo-1-mobile@2x.jpg" alt="">
               </picture>
               <div class="catalog__item-wrapper">
@@ -116,8 +94,11 @@
             </li>
             <li class="catalog__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-2-desktop.webp 1x, img/catalog-item/photo-2-desktop@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-2-desktop.jpg 1x, img/catalog-item/photo-2-desktop@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-2-tablet.webp 1x, img/catalog-item/photo-2-tablet@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-2-tablet.jpg 1x, img/catalog-item/photo-2-tablet@2x.jpg 2x">
+                <source type="image/webp" srcset="img/catalog-item/photo-2-mobile.webp 1x, img/catalog-item/photo-2-mobile@2x.webp 2x">
                 <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-2-mobile.jpg" srcset="img/catalog-item/photo-2-mobile@2x.jpg" alt="">
               </picture>
               <div class="catalog__item-wrapper">
@@ -131,8 +112,11 @@
             </li>
             <li class="catalog__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-3-desktop.webp 1x, img/catalog-item/photo-3-desktop@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-3-desktop.jpg 1x, img/catalog-item/photo-3-desktop@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-3-tablet.webp 1x, img/catalog-item/photo-3-tablet@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-3-tablet.jpg 1x, img/catalog-item/photo-3-tablet@2x.jpg 2x">
+                <source type="image/webp" srcset="img/catalog-item/photo-3-mobile.webp 1x, img/catalog-item/photo-3-mobile@2x.webp 2x">
                 <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-3-mobile.jpg" srcset="img/catalog-item/photo-3-mobile@2x.jpg" alt="">
               </picture>
               <div class="catalog__item-wrapper">
@@ -146,8 +130,11 @@
             </li>
             <li class="catalog__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-4-desktop.webp 1x, img/catalog-item/photo-4-desktop@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-4-desktop.jpg 1x, img/catalog-item/photo-4-desktop@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-4-tablet.webp 1x, img/catalog-item/photo-4-tablet@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-4-tablet.jpg 1x, img/catalog-item/photo-4-tablet@2x.jpg 2x">
+                <source type="image/webp" srcset="img/catalog-item/photo-4-mobile.webp 1x, img/catalog-item/photo-4-mobile@2x.webp 2x">
                 <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-4-mobile.jpg" srcset="img/catalog-item/photo-4-mobile@2x.jpg" alt="">
               </picture>
               <div class="catalog__item-wrapper">
@@ -161,8 +148,11 @@
             </li>
             <li class="catalog__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-5-desktop.webp 1x, img/catalog-item/photo-5-desktop@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-5-desktop.jpg 1x, img/catalog-item/photo-5-desktop@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-5-tablet.webp 1x, img/catalog-item/photo-5-tablet@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-5-tablet.jpg 1x, img/catalog-item/photo-5-tablet@2x.jpg 2x">
+                <source type="image/webp" srcset="img/catalog-item/photo-5-mobile.webp 1x, img/catalog-item/photo-5-mobile@2x.webp 2x">
                 <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-5-mobile.jpg" srcset="img/catalog-item/photo-5-mobile@2x.jpg" alt="">
               </picture>
               <div class="catalog__item-wrapper">
@@ -176,8 +166,11 @@
             </li>
             <li class="catalog__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-6-desktop.webp 1x, img/catalog-item/photo-6-desktop@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-6-desktop.jpg 1x, img/catalog-item/photo-6-desktop@2x.jpg 2x">
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-6-tablet.webp 1x, img/catalog-item/photo-6-tablet@2x.webp 2x">
                 <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-6-tablet.jpg 1x, img/catalog-item/photo-6-tablet@2x.jpg 2x">
+                <source type="image/webp" srcset="img/catalog-item/photo-6-mobile.webp 1x, img/catalog-item/photo-6-mobile@2x.webp 2x">
                 <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-6-mobile.jpg" srcset="img/catalog-item/photo-6-mobile@2x.jpg" alt="">
               </picture>
               <div class="catalog__item-wrapper">
@@ -199,7 +192,9 @@
           <label class="post__download">
             <input class="visually-hidden" type="file">
             <picture>
+              <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-link-tablet.webp 1x, img/catalog-item/photo-link-tablet@2x.webp 2x">
               <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-link-tablet.jpg 1x, img/catalog-item/photo-link-tablet@2x.jpg 2x">
+              <source type="image/webp" srcset="img/catalog-item/photo-link-mobile.webp 1x, img/catalog-item/photo-link-mobile@2x.webp 2x">
               <img class="post__photo-link" src="img/catalog-item/photo-link-mobile.jpg" srcset="img/catalog-item/photo-link-mobile@2x.jpg" width="280" height="374" alt="Загрузить фото.">
             </picture>
           </label>
