--- a/source/index.html
+++ b/source/index.html
@@ -51,15 +51,15 @@
       <section class="downloads">
         <div class="downloads__wrapper">
           <h2 class="downloads__title page-title">Взгляните на&nbsp;жизнь иначе!</h2>
-          <a class="downloads__button" href="#">Скачать приложение</a>
+          <a class="downloads__button" href="https://www.apple.com/ru/app-store/" target="blank">Скачать приложение</a>
           <div class="downloads__link-wrapper">
-            <a class="downloads__link downloads__link--apple" aria-label="Приложение для Apple" href="#">
+            <a class="downloads__link downloads__link--apple" aria-label="Приложение для Apple" href="https://www.apple.com/ru/app-store/" target="blank">
               <p class="visually-hidden">Приложение для Apple</p>
             </a>
-            <a class="downloads__link downloads__link--android" aria-label="Приложение для Android" href="#">
+            <a class="downloads__link downloads__link--android" aria-label="Приложение для Android" href="https://play.google.com/store/apps" target="blank">
               <p class="visually-hidden">Приложение для Android</p>
             </a>
-            <a class="downloads__link downloads__link--windows" aria-label="Приложение для Windows Phone" href="#">
+            <a class="downloads__link downloads__link--windows" aria-label="Приложение для Windows Phone" href="https://www.windowsapps.com/" target="blank">
               <p class="visually-hidden">Приложение для Windows Phone</p>
             </a>
           </div>
@@ -83,7 +83,7 @@
             </li>
             <li class="suggests__item suggests__item--world">
               <h3 class="suggests__title">Меняет мир вокруг</h3>
-              <p class="suggests__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              <p class="suggests__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
             </li>
             <li class="suggests__item suggests__item--friends">
               <h3 class="suggests__title">Заводит новых друзей</h3>
@@ -95,7 +95,7 @@
       <article class="research">
         <div class="research__wrapper">
           <h2 class="research__title">Эффект<br>на 24 часа!</h2>
-          <p class="research__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+          <p class="research__text">Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
           <a class="research__link" href="#">Узнать больше об исследовании</a>
         </div>
       </article>
