--- a/source/catalog.html
+++ b/source/catalog.html
@@ -57,32 +57,36 @@
         <div class="catalog__list-wrapper">
           <ul class="catalog__list">
             <li class="catalog__item catalog__item--panorama">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.webp 1x, img/catalog-item/panorama-desktop@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.jpg 1x, img/catalog-item/panorama-desktop@2x.jpg 2x">
-                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/panorama-tablet.webp 1x, img/catalog-item/panorama-tablet@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/panorama-tablet.jpg 1x, img/catalog-item/panorama-tablet@2x.jpg 2x">
-                <source type="image/webp" srcset="img/catalog-item/panorama-mobile.webp 1x, img/catalog-item/panorama-mobile@2x.webp 2x">
-                <img class="catalog__img catalog__img--panorama" width="320" height="137" src="img/catalog-item/panorama-mobile.jpg" srcset="img/catalog-item/panorama-mobile@2x.jpg" alt="">
-              </picture>
+              <a class="catalog__item-link" href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.webp 1x, img/catalog-item/panorama-desktop@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.jpg 1x, img/catalog-item/panorama-desktop@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/panorama-tablet.webp 1x, img/catalog-item/panorama-tablet@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/panorama-tablet.jpg 1x, img/catalog-item/panorama-tablet@2x.jpg 2x">
+                  <source type="image/webp" srcset="img/catalog-item/panorama-mobile.webp 1x, img/catalog-item/panorama-mobile@2x.webp 2x">
+                  <img class="catalog__img catalog__img--panorama" width="320" height="137" src="img/catalog-item/panorama-mobile.jpg" srcset="img/catalog-item/panorama-mobile@2x.jpg" alt="">
+                </picture>
+              </a>
               <div class="catalog__item-wrapper">
                 <div class="catalog__wrapper-author">
                   <cite class="catalog__autor">Анна</cite>
                   <span class="catalog__time">(5 минут назад)</span>
                 </div>
                 <p class="catalog__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-                <p class="catalog__likes">Нравится:<span class="catalog__likes-number"> 215</span></p>
+                <p class="catalog__likes catalog__likes--panorama">Нравится:<span class="catalog__likes-number"> 215</span></p>
               </div>
             </li>
             <li class="catalog__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-1-desktop.webp 1x, img/catalog-item/photo-1-desktop@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-1-desktop.jpg 1x, img/catalog-item/photo-1-desktop@2x.jpg 2x">
-                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-1-tablet.webp 1x, img/catalog-item/photo-1-tablet@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-1-tablet.jpg 1x, img/catalog-item/photo-1-tablet@2x.jpg 2x">
-                <source type="image/webp" srcset="img/catalog-item/photo-1-mobile.webp 1x, img/catalog-item/photo-1-mobile@2x.webp 2x">
-                <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-1-mobile.jpg" srcset="img/catalog-item/photo-1-mobile@2x.jpg" alt="">
-              </picture>
+              <a class="catalog__item-link" href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-1-desktop.webp 1x, img/catalog-item/photo-1-desktop@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-1-desktop.jpg 1x, img/catalog-item/photo-1-desktop@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-1-tablet.webp 1x, img/catalog-item/photo-1-tablet@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-1-tablet.jpg 1x, img/catalog-item/photo-1-tablet@2x.jpg 2x">
+                  <source type="image/webp" srcset="img/catalog-item/photo-1-mobile.webp 1x, img/catalog-item/photo-1-mobile@2x.webp 2x">
+                  <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-1-mobile.jpg" srcset="img/catalog-item/photo-1-mobile@2x.jpg" alt="">
+                </picture>
+              </a>
               <div class="catalog__item-wrapper">
                 <div class="catalog__wrapper-author">
                   <cite class="catalog__autor">Левон</cite>
@@ -93,14 +97,16 @@
               </div>
             </li>
             <li class="catalog__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-2-desktop.webp 1x, img/catalog-item/photo-2-desktop@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-2-desktop.jpg 1x, img/catalog-item/photo-2-desktop@2x.jpg 2x">
-                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-2-tablet.webp 1x, img/catalog-item/photo-2-tablet@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-2-tablet.jpg 1x, img/catalog-item/photo-2-tablet@2x.jpg 2x">
-                <source type="image/webp" srcset="img/catalog-item/photo-2-mobile.webp 1x, img/catalog-item/photo-2-mobile@2x.webp 2x">
-                <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-2-mobile.jpg" srcset="img/catalog-item/photo-2-mobile@2x.jpg" alt="">
-              </picture>
+              <a class="catalog__item-link" href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-2-desktop.webp 1x, img/catalog-item/photo-2-desktop@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-2-desktop.jpg 1x, img/catalog-item/photo-2-desktop@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-2-tablet.webp 1x, img/catalog-item/photo-2-tablet@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-2-tablet.jpg 1x, img/catalog-item/photo-2-tablet@2x.jpg 2x">
+                  <source type="image/webp" srcset="img/catalog-item/photo-2-mobile.webp 1x, img/catalog-item/photo-2-mobile@2x.webp 2x">
+                  <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-2-mobile.jpg" srcset="img/catalog-item/photo-2-mobile@2x.jpg" alt="">
+                </picture>
+              </a>
               <div class="catalog__item-wrapper">
                 <div class="catalog__wrapper-author">
                   <cite class="catalog__autor">Антон</cite>
@@ -111,14 +117,16 @@
               </div>
             </li>
             <li class="catalog__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-3-desktop.webp 1x, img/catalog-item/photo-3-desktop@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-3-desktop.jpg 1x, img/catalog-item/photo-3-desktop@2x.jpg 2x">
-                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-3-tablet.webp 1x, img/catalog-item/photo-3-tablet@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-3-tablet.jpg 1x, img/catalog-item/photo-3-tablet@2x.jpg 2x">
-                <source type="image/webp" srcset="img/catalog-item/photo-3-mobile.webp 1x, img/catalog-item/photo-3-mobile@2x.webp 2x">
-                <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-3-mobile.jpg" srcset="img/catalog-item/photo-3-mobile@2x.jpg" alt="">
-              </picture>
+              <a class="catalog__item-link" href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-3-desktop.webp 1x, img/catalog-item/photo-3-desktop@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-3-desktop.jpg 1x, img/catalog-item/photo-3-desktop@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-3-tablet.webp 1x, img/catalog-item/photo-3-tablet@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-3-tablet.jpg 1x, img/catalog-item/photo-3-tablet@2x.jpg 2x">
+                  <source type="image/webp" srcset="img/catalog-item/photo-3-mobile.webp 1x, img/catalog-item/photo-3-mobile@2x.webp 2x">
+                  <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-3-mobile.jpg" srcset="img/catalog-item/photo-3-mobile@2x.jpg" alt="">
+                </picture>
+              </a>
               <div class="catalog__item-wrapper">
                 <div class="catalog__wrapper-author">
                   <cite class="catalog__autor">Борис</cite>
@@ -129,14 +137,16 @@
               </div>
             </li>
             <li class="catalog__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-4-desktop.webp 1x, img/catalog-item/photo-4-desktop@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-4-desktop.jpg 1x, img/catalog-item/photo-4-desktop@2x.jpg 2x">
-                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-4-tablet.webp 1x, img/catalog-item/photo-4-tablet@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-4-tablet.jpg 1x, img/catalog-item/photo-4-tablet@2x.jpg 2x">
-                <source type="image/webp" srcset="img/catalog-item/photo-4-mobile.webp 1x, img/catalog-item/photo-4-mobile@2x.webp 2x">
-                <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-4-mobile.jpg" srcset="img/catalog-item/photo-4-mobile@2x.jpg" alt="">
-              </picture>
+              <a class="catalog__item-link" href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-4-desktop.webp 1x, img/catalog-item/photo-4-desktop@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-4-desktop.jpg 1x, img/catalog-item/photo-4-desktop@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-4-tablet.webp 1x, img/catalog-item/photo-4-tablet@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-4-tablet.jpg 1x, img/catalog-item/photo-4-tablet@2x.jpg 2x">
+                  <source type="image/webp" srcset="img/catalog-item/photo-4-mobile.webp 1x, img/catalog-item/photo-4-mobile@2x.webp 2x">
+                  <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-4-mobile.jpg" srcset="img/catalog-item/photo-4-mobile@2x.jpg" alt="">
+                </picture>
+              </a>
               <div class="catalog__item-wrapper">
                 <div class="catalog__wrapper-author">
                   <cite class="catalog__autor">Сергей</cite>
@@ -147,14 +157,16 @@
               </div>
             </li>
             <li class="catalog__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-5-desktop.webp 1x, img/catalog-item/photo-5-desktop@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-5-desktop.jpg 1x, img/catalog-item/photo-5-desktop@2x.jpg 2x">
-                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-5-tablet.webp 1x, img/catalog-item/photo-5-tablet@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-5-tablet.jpg 1x, img/catalog-item/photo-5-tablet@2x.jpg 2x">
-                <source type="image/webp" srcset="img/catalog-item/photo-5-mobile.webp 1x, img/catalog-item/photo-5-mobile@2x.webp 2x">
-                <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-5-mobile.jpg" srcset="img/catalog-item/photo-5-mobile@2x.jpg" alt="">
-              </picture>
+              <a class="catalog__item-link" href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-5-desktop.webp 1x, img/catalog-item/photo-5-desktop@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-5-desktop.jpg 1x, img/catalog-item/photo-5-desktop@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-5-tablet.webp 1x, img/catalog-item/photo-5-tablet@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-5-tablet.jpg 1x, img/catalog-item/photo-5-tablet@2x.jpg 2x">
+                  <source type="image/webp" srcset="img/catalog-item/photo-5-mobile.webp 1x, img/catalog-item/photo-5-mobile@2x.webp 2x">
+                  <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-5-mobile.jpg" srcset="img/catalog-item/photo-5-mobile@2x.jpg" alt="">
+                </picture>
+              </a>
               <div class="catalog__item-wrapper">
                 <div class="catalog__wrapper-author">
                   <cite class="catalog__autor">Максим</cite>
@@ -165,14 +177,16 @@
               </div>
             </li>
             <li class="catalog__item">
-              <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-6-desktop.webp 1x, img/catalog-item/photo-6-desktop@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-6-desktop.jpg 1x, img/catalog-item/photo-6-desktop@2x.jpg 2x">
-                <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-6-tablet.webp 1x, img/catalog-item/photo-6-tablet@2x.webp 2x">
-                <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-6-tablet.jpg 1x, img/catalog-item/photo-6-tablet@2x.jpg 2x">
-                <source type="image/webp" srcset="img/catalog-item/photo-6-mobile.webp 1x, img/catalog-item/photo-6-mobile@2x.webp 2x">
-                <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-6-mobile.jpg" srcset="img/catalog-item/photo-6-mobile@2x.jpg" alt="">
-              </picture>
+              <a class="catalog__item-link" href="#">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/photo-6-desktop.webp 1x, img/catalog-item/photo-6-desktop@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/photo-6-desktop.jpg 1x, img/catalog-item/photo-6-desktop@2x.jpg 2x">
+                  <source type="image/webp" media="(min-width: 660px)" srcset="img/catalog-item/photo-6-tablet.webp 1x, img/catalog-item/photo-6-tablet@2x.webp 2x">
+                  <source type="image/jpeg" media="(min-width: 660px)" srcset="img/catalog-item/photo-6-tablet.jpg 1x, img/catalog-item/photo-6-tablet@2x.jpg 2x">
+                  <source type="image/webp" srcset="img/catalog-item/photo-6-mobile.webp 1x, img/catalog-item/photo-6-mobile@2x.webp 2x">
+                  <img class="catalog__img" width="280" height="180" src="img/catalog-item/photo-6-mobile.jpg" srcset="img/catalog-item/photo-6-mobile@2x.jpg" alt="">
+                </picture>
+              </a>
               <div class="catalog__item-wrapper">
                 <div class="catalog__wrapper-author">
                   <cite class="catalog__autor">Надежда</cite>
