--- a/source/form.html
+++ b/source/form.html
@@ -104,13 +104,17 @@
           </fieldset>
           <fieldset class="contest__feedback">
             <span class="contest__legend contest__legend--feedback">Контактная информация</span>
-            <div class="field field--feedback">
+            <div class="field field--feedback field--phone">
               <label class="field__label" for="phone">НОМЕР ТЕЛЕФОНА</label>
-              <input class="field__input" name="phone" id="phone" type="tel" placeholder="Номер, пожалуйста">
+              <div class="field__input-wrapper--phone">
+                <input class="field__input" name="phone" id="phone" type="tel" placeholder="Номер, пожалуйста">
+              </div>
             </div>
-            <div class="field field--feedback">
+            <div class="field field--feedback ">
               <label class="field__label" for="email">АДРЕС ПОЧТЫ</label>
-              <input class="field__input" name="email" id="email" type="email" placeholder="Введите почту *">
+              <div class="field__input-wrapper--email">
+                <input class="field__input" name="email" id="email" type="email" placeholder="Введите почту *">
+              </div>
             </div>
           </fieldset>
           <fieldset class="contest__system">
@@ -194,5 +198,25 @@
         </aside>
       </div>
     </footer>
+    <section class="modal">
+      <div class="modal__error--close">
+        <div class="modal__wrapper">
+          <h2 class="modal__title">Что-то пошло не&nbsp;так!</h2>
+          <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        </div>
+        <div class="modal__gray">
+          <button class="page-form__button modal__button" type="button">Ок</button>
+        </div>
+      </div>
+      <div class="modal__success--close">
+        <div class="modal__wrapper">
+          <h2 class="modal__title">Ваша заявка отправлена</h2>
+          <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
+        </div>
+        <div class="modal__gray">
+          <button class="page-form__button modal__button" type="button">Закрыть окно</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
